# gmif

./: .clang-format  CMakeLists.txt  README.md  test.sh
include/gmif/: gmif.h
src/: attr_value.cpp  check.h  io.cpp  io.h  mif.cpp  mif_element.cpp  mif_header.cpp  utils.cpp  utils.h
test/: CMakeLists.txt
test/data/: line_demo.mid  line_demo.mif  point_demo.mif  region_demo.mid  region_demo.mif
test/unittest/: CMakeLists.txt  test_attr_value.cpp  test_mif.cpp  test_utils.cpp
